content/kubernetes/configuration/observability/cilium-and-grafana/clusterwide-l7-visibility.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-clusterwide-all-http-traffic
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints: []
      toPorts:
        - ports:
            - port: "0"
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    - toEndpoints: []
      toPorts:
        - ports:
            - port: "0"
              protocol: TCP
          rules:
            http:
              - {}
