content/kubernetes/configuration/observability/cilium-and-grafana/ns-l7-visibility.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-http-traffic
  namespace: cilium-monitoring
spec:
  endpointSelector: {}
  ingress:
    - toPorts:
        - ports:
            - port: "0"
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    - toPorts:
        - ports:
            - port: "0"
              protocol: TCP
          rules:
            http:
              - {}
